fix: simplify benchmarks and fix CI Rust version issue
- Use rust-toolchain.toml for consistent Rust version in CI
- Reduce benchmark to single small test for faster debugging
- Add #[allow(dead_code)] and #[allow(unused_imports)] attributes
- Sample size reduced to 10 for speed
- Will revert after fixing CI deployment

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -36,11 +36,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Install Rust nightly
-      uses: dtolnay/rust-toolchain@nightly
-      with:
-        targets: ${{ matrix.target }}
-        components: rustfmt, clippy
+    # The rust-toolchain.toml file specifies the exact version needed
+    # Just add the target for cross-compilation
+    - name: Add Rust target
+      run: rustup target add ${{ matrix.target }}
 
     - name: Cache cargo registry
       uses: actions/cache@v4
