--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -24,12 +24,12 @@ jobs:
           - os: ubuntu-latest
             arch: x86_64
             target: x86_64-unknown-linux-gnu
-          # - os: macos-latest
-          #   arch: aarch64
-          #   target: aarch64-apple-darwin
-          # - os: windows-latest
-          #   arch: x86_64
-          #   target: x86_64-pc-windows-msvc
+          - os: macos-latest
+            arch: aarch64
+            target: aarch64-apple-darwin
+          - os: windows-latest
+            arch: x86_64
+            target: x86_64-pc-windows-msvc
 
     runs-on: ${{ matrix.os }}
 
